--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,30 @@
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
       </div>
     </header>
-
+    <nav>
+      <ul>
+        {% for nav in site.data.nav %}
+          {% if nav.subcategories != null %}
+            <li>
+              <a href="{{ site.url }}{{ nav.url }}">{{ nav.title }} ▼</a>
+              <ul>
+              {% for subcategory in nav.subcategories %}
+                <li><a href="{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a></li>
+              {% endfor %}
+              </ul>
+            </li>
+          {% elsif nav.title == page.title %}
+             <li class="active">
+               <a href="{{ nav.url }}">{{ nav.title }}</a>
+             </li>
+          {% else %} 
+            <li>
+              <a href="{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
+            </li>
+          {% endif %}
+        {% endfor %}
+      </ul>
+    </nav> 
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
