--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,14 +6,14 @@ header h1 {
   width: 700px;
 }
 
-.nav ul {
+nav ul {
   list-style: none;
   background-color: #444;
   text-align: center;
   padding: 0;
   margin: 0;
 }
-.nav li {
+nav li {
   font-family: 'Oswald', sans-serif;
   font-size: 1.2em;
   line-height: 40px;
@@ -21,25 +21,25 @@ header h1 {
   border-bottom: 1px solid #888;
 }
  
-.nav a {
+nav a {
   text-decoration: none;
   color: #fff;
   display: block;
   transition: .3s background-color;
 }
  
-.nav a:hover {
+nav a:hover {
   background-color: #005f5f;
 }
  
-.nav a.active {
+nav a.active {
   background-color: #fff;
   color: #444;
   cursor: default;
 }
  
 @media screen and (min-width: 600px) {
-  .nav li {
+  nav li {
     width: 120px;
     border-bottom: none;
     height: 50px;
@@ -48,7 +48,7 @@ header h1 {
   }
  
   /* Option 1 - Display Inline */
-  .nav li {
+  nav li {
     display: inline-block;
     margin-right: -4px;
   }
