--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
       </div>
     </header>
     <div>
-      <nav class="site-navigation">
+      <nav class="nav">
         <ul class="menu">
           {% for nav in site.data.nav %}
             {% if nav.subcategories != null %}
