--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,12 +2,15 @@
 ---
 
 @import "{{ site.theme }}";
-header h1 {
-  width: 650px;
-}
-
-header .inner {
-  width: 610px;
+header { 
+  padding-top: 15px;
+  padding-bottom: 15px;
+  h1 {
+    width: 650px;
+  }
+  .inner {
+    width: 610px;
+  }
 }
 
 .nav ul {
